--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -18,29 +18,32 @@
     "affected:test": "nx affected:test --parallel"
   },
   "resolutions": {
-    "@octokit/types": "^13.0.0"
+    "@octokit/types": "^13.0.0",
+    "brace-expansion": "^2.0.2",
+    "@babel/helpers": "^7.26.10",
+    "@babel/runtime": "^7.26.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@nx/eslint": "21.6.1",
-    "@nx/js": "^21.6.1",
-    "@nx/vite": "^21.6.1",
-    "@swc-node/register": "~1.10.10",
-    "@swc/core": "~1.13.3",
+    "@nx/eslint": "21.6.3",
+    "@nx/js": "^21.6.3",
+    "@nx/vite": "^21.6.3",
+    "@swc-node/register": "~1.11.1",
+    "@swc/core": "~1.13.20",
     "@swc/helpers": "~0.5.17",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.44.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "chalk": "^5.4.1",
-    "eslint": "^9.36.0",
+    "chalk": "^5.6.2",
+    "eslint": "^9.37.0",
     "eslint-plugin-prettier": "5.5.4",
-    "nx": "21.3.2",
+    "nx": "21.6.3",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.7",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9",
     "vitest": "^3.2.4"
   },
   "packageManager": "yarn@4.3.1"
